--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,35 +1,37 @@
+<app-navbar></app-navbar>
+
 <div class="profile-container">
-    <h2>User Profile</h2>
-    
-    <form [formGroup]="userProfileForm" (ngSubmit)="updateUserProfile()">
+  <h2>My Profile</h2>
+  <div class="profile-card">
+    <form [formGroup]="profileForm" (ngSubmit)="onUpdateProfile()">
       <div class="form-group">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" formControlName="fname" class="form-control" />
+        <label for="fname">First Name:</label>
+        <input id="fname" formControlName="fname" type="text" />
       </div>
-  
+
       <div class="form-group">
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" formControlName="lname" class="form-control" />
+        <label for="lname">Last Name:</label>
+        <input id="lname" formControlName="lname" type="text" />
       </div>
-  
+
       <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" formControlName="email" class="form-control" />
+        <label for="email">Email:</label>
+        <input id="email" formControlName="email" type="email" />
       </div>
-  
+
       <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" formControlName="password" class="form-control" />
+        <label for="password">Password:</label>
+        <input id="password" formControlName="password" type="password" />
       </div>
-  
+
       <div class="form-group">
-        <label for="imagePath">Profile Image (Optional)</label>
-        <input type="text" id="imagePath" formControlName="imagePath" class="form-control" />
+        <label for="imagepath">Profile Image URL:</label>
+        <input id="imagepath" formControlName="imagepath" type="text" />
       </div>
-  
-      <button type="submit" class="btn btn-primary" [disabled]="userProfileForm.invalid">
-        Update Profile
-      </button>
+
+      <button type="submit" class="submit-btn">Update Profile</button>
     </form>
   </div>
-  
+</div>
+
+<app-footer></app-footer>
