--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,4 +1,4 @@
-/* عام للصفحة */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -6,7 +6,7 @@ body {
     background-color: #f4f4f4;
   }
   
-  /* الحاوية الرئيسية للملف الشخصي */
+
   .profile-container {
     max-width: 800px;
     margin: 40px auto;
@@ -22,7 +22,7 @@ body {
     margin-bottom: 20px;
   }
   
-  /* بطاقات النموذج */
+ 
   .profile-card {
     display: flex;
     justify-content: center;
@@ -59,12 +59,12 @@ body {
     outline: none;
   }
   
-  /* الزر */
+ 
   .submit-btn {
     width: 100%;
     padding: 12px;
     font-size: 16px;
-    background-color: #f97704; /* نفس اللون البرتقالي */
+    background-color: #f97704; 
     color: white;
     border: none;
     border-radius: 5px;
@@ -75,8 +75,7 @@ body {
   .submit-btn:hover {
     background-color: #d96502;
   }
-  
-  /* تباعد بين الحواف */
+ 
   footer {
     background-color: #f97704;
     color: white;
@@ -88,11 +87,11 @@ body {
     margin: 0;
   }
   
-  /* نافبار */
+
   .navbar {
     display: flex;
     justify-content: space-between;
-    background-color: #f97704; /* لون برتقالي */
+    background-color: #f97704; 
     padding: 1rem;
   }
   
