--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -4,6 +4,7 @@
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 5px;
+  background-image: url('/assets/images/h.jfif');
 }
 
 .form-group {
