--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -7,10 +7,13 @@
       <li><a routerLink="/testimonials">Testimonials</a></li>
       <li><a routerLink="/charities">Charities</a></li>
       <li><a routerLink="/charitycategory">Donation</a></li>
+     
+ 
       <li *ngIf="!isLoggedIn"><a routerLink="/security/login">Login</a></li>
       <li *ngIf="isLoggedIn"><a routerLink="/profile">Profile</a></li>
+      <li *ngIf="isLoggedIn"><a routerLink="/user-charities">my charities</a></li>
       <li *ngIf="isLoggedIn"><a routerLink="/testimonial">Add testimonial</a></li>
-      <li *ngIf="isLoggedIn"><a routerLink="/charities/add">Add Charity</a></li>
+      <li *ngIf="isLoggedIn"><a routerLink="/addcharity">Add Charity</a></li>
       <li *ngIf="isLoggedIn"><button (click)="logout()">Logout</button></li>
     </ul>
   </nav>
