angular payy for post

--- a/src/app/addcharity/addcharity.component.html
+++ b/src/app/addcharity/addcharity.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <form [formGroup]="charityForm" (ngSubmit)="onSubmit()" class="border-0">
     <h2>Charity Form</h2>
   
@@ -57,4 +58,4 @@
     
     <button type="submit" [disabled]="charityForm.invalid">Request a Charity</button>
   </form>
-  
+  <app-footer></app-footer>
