--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       <li><a routerLink="/about">About Us</a></li>
       <li><a routerLink="/contact">Contact Us</a></li>
       <li><a routerLink="/testimonials">Testimonials</a></li>
-      <li><a routerLink="/charities">Charities</a></li>
+      <li><a routerLink="/getcharity">Charities</a></li>
       <li><a routerLink="/charitycategory">Donation</a></li>
      
  
