--- a/src/app/about-us-c/about-us-c.component.html
+++ b/src/app/about-us-c/about-us-c.component.html
@@ -1,5 +1,5 @@
+<!-- src/app/components/about-us/about-us.component.html -->
 <app-navbar></app-navbar>
-
 <!-- Hero Section with Image Slider (Smaller Size) -->
 <div class="container my-4">
   <div id="imageSlider" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -32,13 +32,9 @@
 </div>
 <div>.</div>
 
-
-
-<!-- src/app/components/home/home.component.html -->
-
-<div class="home-container">
-  <h1>{{ title }}</h1>
-  <p>{{ content }}</p>
-</div>
-
-<app-footer></app-footer>
+<div></div>
+<div class="about-us-container">
+    <h1>{{ title }}</h1>
+    <p>{{ content }}</p>
+  </div>
+  <app-footer></app-footer>
