--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,9 +2,9 @@
     <div class="logo">Charity Donation</div>
     <ul class="nav-links">
       <li><a routerLink="/home">Home</a></li>
-      <li><a routerLink="/about">About Us</a></li>
+      <li><a routerLink="/about-us">About Us</a></li>
       <li><a routerLink="/contact">Contact Us</a></li>
-      <li><a routerLink="/testimonials">Testimonials</a></li>
+    
       <li><a routerLink="/getcharity">Charities</a></li>
       <li><a routerLink="/charitycategory">Donation</a></li>
      
