--- a/src/app/user-charities/user-charities.component.html
+++ b/src/app/user-charities/user-charities.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container mt-4">
-  <h2>User's Charities</h2>
+  <h2>User's Charities 25 $</h2>
   <div *ngIf="charities.length > 0; else noCharities">
     <div *ngFor="let charity of charities" class="card mb-3">
       <div class="card-body">
